--- a/King_problem1/.project
+++ b/King_problem1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>King_p1</name>
+	<name>King_problem1</name>
 	<comment></comment>
 	<projects>
 	</projects>
