--- a/kp2/.project
+++ b/kp2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>King_problem2</name>
+	<name>kp2</name>
 	<comment></comment>
 	<projects>
 	</projects>
